<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="5dp"
   android:paddingTop="5dp">
            <TextView
                android:id="@+id/orderItemDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textSampleDescription"
                android:textSize="16sp"
                android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/orderItemPrice"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="wrap_content"
            android:text="@string/textSamplePrice"/>
        <TextView
            android:id="@+id/orderItemStatus"
            android:layout_width="0dp"
            android:layout_weight="0.50"
            android:layout_height="wrap_content"
            android:text="@string/textSample"/>

    </LinearLayout>
</LinearLayout>