<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/textLoginUsername"
        android:height="30dp"
        android:textSize="12sp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:id="@+id/edit_login_username" />

    <TextView
        android:id="@+id/text_login_password"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textSize="12sp"
        android:layout_below="@id/edit_login_username"
        android:layout_alignLeft="@id/text_login_username"
        android:text="@string/textLoginPassword" />


    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:layout_below="@id/edit_login_username"
        android:layout_alignParentRight="true"
        android:id="@+id/edit_login_password" />

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_login_password"
        android:text="@string/textLoginBtnLogin"/>
</RelativeLayout>